2012-12-31  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-inews-insert-gcc): Don't insert Gcc headers if Gnus
	isn't running, because Gnus will probably not know how to handle the
	Gcc header (bug#11941).

	* nnimap.el (nnimap-update-info): Treat \Deleted articles as \Read
	articles.

2012-12-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnfolder.el (nnfolder-recursive-directory-files): New function.
	(nnfolder-generate-active-file): Make this function work with recursive
	folder names.

2012-12-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-open-connection): Use HELP as the capability command
	instead of CAPABILITY because Typhoon v2.2.2.503 chokes completely on
	unknown commands.  And CAPABILITY is an unknown command (bug#12763).

2012-12-27  Wolfgang Jenkner  <wjenkner@inode.at>

	* gnus-spec.el (gnus-face-face-function): Don't use nil as no-op face
	place holder since this gives `Invalid face reference: nil' messages.
	Use the `default' face instead.  It has the same effect here, even
	though it is not no-op.

	* gnus-util.el
	(gnus-put-text-property-excluding-characters-with-faces): Similarly.

2012-12-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-summary-resend-message): Don't bug out on
	non-string posting styles (bug#13285).

2012-12-27  Glenn Morris  <rgm@gnu.org>

	* plstore.el (plstore-passphrase-callback-function):
	Use plstore-get-file.

2012-12-27  Andreas Schwab  <schwab@linux-m68k.org>

	* mml2015.el (mml2015-epg-key-image): Separate attribute stream from
	stderr.

2012-12-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml2015.el (mml2015-epg-key-image): Use mm-set-buffer-multibyte.

	* gnus-compat.el (set-buffer-multibyte): Remove.

2012-12-25  Adam Sjøgren  <asjo@koldfront.dk>

	* mml2015.el (mml2015-epg-key-image): use --attribute-fd rather than
	temporary file to get PGP key image. Pass no-show-photos when extracting
	image to avoid having it pop up twice.
